--- a/src/style.sass
+++ b/src/style.sass
@@ -1,5 +1,5 @@
 body
   font-family: sans-serif
   background: darken(white, 0.2)
-  background-image: url('../img/inu.png')
+  background-image: url('../img/sample.png')
   background-size: cover
